--- a/style.css
+++ b/style.css
@@ -1,38 +1,78 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html,
 body {
   width: 100%;
   height: 100%;
   margin: 0;
   background-color: rgb(22, 22, 22);
+
+  font-family: 'Open Sans', sans-serif;
+}
+
+kbd {
+  background-color: #eee;
+  border-radius: 3px;
+  border: 1px solid #b4b4b4;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
+  color: #333;
+  display: inline-block;
+  font-size: .85em;
+  font-weight: 700;
+  line-height: 1;
+  padding: 2px 4px;
+  white-space: nowrap;
+ }
+
+button {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
+}
+
+#screen {
+  height: 100vh;
+  width: 100vw;
+}
+
+#overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-#size-wrapper {
-  height: 800px;
-  width: 600px;
-}
-
-#controls {
-  display: flex;
-  box-sizing: border-box;
-  background-color: rgb(55, 55, 55);
-  height: 100px;
-  padding: 1rem;
+  background-color: rgb(180, 180, 180);
+  color: rgb(100, 100, 100);
 }
 
 #target-container {
   position: relative;
-  height: 400px;
+  height: 100%;
   width: 100%;
   cursor: crosshair;
   background-color: rgb(255, 255, 255);
 }
 
 #scoreboard {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  background-color: rgb(55, 55, 55);
   color: #fff;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: center;
 }
 
 .target {
@@ -46,6 +86,34 @@ body {
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+}
+
+#controls {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+}
+
+#controls-layout {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: rgb(55, 55, 55);
+  padding: 1rem;
+  color: white;
+  gap: 1rem;
+}
+
+.control > p {
+  margin: 0;
+  margin-bottom: .5rem;
+}
+
+.control input {
+  margin: 0;
+  margin-bottom: .5rem;
 }
 
 @keyframes live {
