--- a/style.css
+++ b/style.css
@@ -11,39 +11,21 @@ body {
   height: 100%;
   margin: 0;
   background-color: rgb(22, 22, 22);
-
   font-family: 'Open Sans', sans-serif;
 }
 
-kbd {
-  background-color: #eee;
-  border-radius: 3px;
-  border: 1px solid #b4b4b4;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
-  color: #333;
-  display: inline-block;
-  font-size: .85em;
-  font-weight: 700;
-  line-height: 1;
-  padding: 2px 4px;
-  white-space: nowrap;
- }
-
-button {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 500;
+body {
+  display: flex;
+  flex-direction: column;
 }
 
 #screen {
+  margin: auto;
   height: 100vh;
   width: 100vw;
 }
 
 #overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
   width: 100%;
   height: 100%;
   display: flex;
@@ -67,7 +49,7 @@ button {
   left: 0;
   z-index: 10;
   width: 100%;
-  background-color: rgb(55, 55, 55);
+  background-color: rgba(55, 55, 55, .85);
   color: #fff;
   display: flex;
   flex-direction: row;
@@ -100,7 +82,7 @@ button {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: rgb(55, 55, 55);
+  background-color: rgba(55, 55, 55, .85);
   padding: 1rem;
   color: white;
   gap: 1rem;
@@ -114,6 +96,25 @@ button {
 .control input {
   margin: 0;
   margin-bottom: .5rem;
+}
+
+kbd {
+  background-color: #eee;
+  border-radius: 3px;
+  border: 1px solid #b4b4b4;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
+  color: #333;
+  display: inline-block;
+  font-size: .85em;
+  font-weight: 700;
+  line-height: 1;
+  padding: 2px 4px;
+  white-space: nowrap;
+ }
+
+button {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
 }
 
 @keyframes live {
